Starts basic styling

--- a/react-contentful-jokes/index.html
+++ b/react-contentful-jokes/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title></title>
+	<link type="text/css" rel="stylesheet" href="./assets/styles.css"/>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
 	<script src="bundle.js"></script>
 </head>
 <body>
