CSS loader added

--- a/react-contentful-jokes/index.html
+++ b/react-contentful-jokes/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Contentful Jokes</title>
 	<link type="text/css" rel="stylesheet" href="./assets/styles.css"/>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
 	<script src="bundle.js"></script>
