--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,10 @@
   <script type="text/javascript" src="https://unpkg.com/react-router@4.2.0/umd/react-router.min.js"></script>
   <script type="text/javascript" src="https://unpkg.com/react-router-dom@4.2.2/umd/react-router-dom.min.js"></script>
   <script type="text/javascript" src="https://unpkg.com/react-markdown@3.2.0/umd/react-markdown.js"></script>
-  <link rel="shortcut icon" type="image/png" href="/static/favicon.png">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
+  <link rel="shortcut icon" type="image/png" href="/static/favicon.png"/>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css"/>
   <link type="text/css" rel="stylesheet" href="styles.css"/>
-  <script src="bundle.js" type="text/javascript"></script>
+  <script type="text/javascript" src="bundle.js"></script>
 </head>
 
 <body>
